# python-documentation-example

./: 404.html  README.md  docs.db  index.html  mkdocs.yml  objects.inv  pyproject.toml  scanapi-report.html  scanapi.yaml
docs/: index.md
docs/repositories/: clientRepository.md
repositories/clientRepository/: index.html
search/: search_index.json
src/: main.py
src/config/: database.py
src/models/: BaseModel.py  ClientModel.py
src/repositories/: ClientRepository.py
src/routers/: clientRouter.py
src/routers/commons/: dependencies.py
src/schemas/: ClientSchema.py  ORMBaseSchema.py
