[tool.poetry]
name = "python-documentation-example"
version = "0.1.0"
description = "Simple API using some documentation aproachs"
authors = ["XandeCoding <af.santos1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
peewee = "^3.14.8"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
